--- a/views/contactos.html
+++ b/views/contactos.html
@@ -18,21 +18,45 @@
     <div class="contenedorPrincipal">
         <!-- Inicio del header -->
         <header class="contenedorHeader">
-            <img src="../img/logo.png" alt="" class="logo">
-            <!-- inicio nav -->
-            <nav>
-                <ul class="listaNav">
-                    <li><a href="../index.html">Inicio </a></li>
-                    <li><a href="productos.html">Productos </a></li>
-                    <li><a href="nuestroTrabajo.html">Nuestro Trabajo </a></li>
-                    <li><a class="local">Contacto</a></li>
-                    <li><a href="ubicacion.html">Ubicación </a></li>
-                </ul>
-            </nav>
             <!-- Cierro nav-->            
         </header>
         <!-- Final del header-->
-
+        <main>
+            <nav class="navbar navbar-expand-lg navbar fixed-top bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="/img/logo.png" class="logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link" href="productos.html">Productos</a>
+                            </li>
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link" href="nuestroTrabajo.html">
+                                Nuestro Trabajo
+                                </a>
+                            </li>
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link active" aria-current="page"  href="/views/contactos.html">Contactos</a>
+                            </li>
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link" href="ubicacion.html">Ubicación</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Buscar</button>
+                        </form>
+                    </div>
+                </div>
+                </nav>
         <!-- Inicio del contenido-->
         <div class="contenedorContenido">
             <h1> Contacto </h1>
@@ -82,6 +106,7 @@
         <div class="wave">
             <img src="../img/wave.svg" alt="">
         </div>
+        </main>
         <footer class="contenedorFooter">
             Design Muebles©. Todos los derechos reservados.
 
