--- a/views/nuestroTrabajo.html
+++ b/views/nuestroTrabajo.html
@@ -18,26 +18,98 @@
     <div class="contenedorPrincipal">
         <!-- Inicio del header -->
         <header class="contenedorHeader">
-            <img src="../img/logo.png" alt="" class="logo">
-            <!-- inicio nav -->
-            <nav>
-                <ul class="listaNav">
-                    <li><a href="../index.html">Inicio </a></li>
-                    <li><a href="productos.html">Productos </a></li>
-                    <li><a class="local">Nuestro Trabajo</a></li>
-                    <li><a href="contactos.html">Contacto </a></li>
-                    <li><a href="ubicacion.html">Ubicación </a></li>
-                </ul>
-            </nav>
-            <!-- Cierro nav-->            
+
         </header>
+        <main>
+            <nav class="navbar navbar-expand-lg navbar fixed-top bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="/img/logo.png" class="logo">
+                    </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item nav-pills nav-fill">
+                            <a class="nav-link active" aria-current="page" href="/views/nuestroTrabajo.html">
+                            Nuestro Trabajo
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contactos.html">Contactos</a>
+                        </li>
+                        <li class="nav-item nav-pills nav-fill">
+                            <a class="nav-link" href="ubicacion.html">Ubicación</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+                </div>
+                </div>
+            </nav>
+        </main>
         <h1> Nuestro Trabajo </h1>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="/img/MesaRedonda.jpeg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>First slide label</h5>
+                              <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="/img/Lijado.jpeg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5 class="texto_cr">Second slide label</h5>
+                              <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="/img/Herramientas.jpeg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5><b>Third slide label</b></h5>
+                              <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                </div>
+                <div class="col">
+                    <p class="parrafoNT"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce justo libero, pulvinar eu mollis sit amet, egestas porta nunc. Phasellus eleifend ante diam, pulvinar consectetur lacus pellentesque ac. Sed eu odio eu nisi maximus sodales in at sem. Proin vitae vehicula ligula, tristique hendrerit mauris. Donec bibendum volutpat purus, nec vulputate lacus ultrices hendrerit. In pulvinar felis et tortor mollis, eget pharetra neque fermentum. Nulla molestie quis neque non gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                </div>
+
+            </div>
+
+        </div>
         <h5 class="parrafoNT">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce justo libero, pulvinar eu mollis sit amet, egestas porta nunc. Phasellus eleifend ante diam, pulvinar consectetur lacus pellentesque ac. Sed eu odio eu nisi maximus sodales in at sem. Proin vitae vehicula ligula, tristique hendrerit mauris. Donec bibendum volutpat purus, nec vulputate lacus ultrices hendrerit. In pulvinar felis et tortor mollis, eget pharetra neque fermentum. Nulla molestie quis neque non gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
         </h5>
-        <div class="video">
-            <iframe id="videoNT" width="560" height="315" src="https://www.youtube.com/embed/IVj0VCzrHk0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
         <div class="wave">
             <img src="../img/wave.svg" alt="">
         </div>
