--- a/views/productos.html
+++ b/views/productos.html
@@ -17,20 +17,45 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <div class="contenedorPrincipal">
         <!-- Inicio del header -->
-        <header class="contenedorHeader">
-            <img src="../img/logo.png" alt="" class="logo">
-            <!-- inicio nav -->
-            <nav>
-                <ul class="listaNav">
-                    <li><a href="../index.html">Inicio </a></li>
-                    <li><a class="local">Productos</a></li>
-                    <li><a href="nuestroTrabajo.html">Nuestro Trabajo </a></li>
-                    <li><a href="contactos.html">Contacto </a></li>
-                    <li><a href="ubicacion.html">Ubicación </a></li>
-                </ul>
-            </nav>
-            <!-- Cierro nav-->            
+        <header class="contenedorHeader">           
         </header>
+        <main>
+            <nav class="navbar navbar-expand-lg navbar fixed-top bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="/img/logo.png" class="logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link active" aria-current="page" href="/views/productos.html">Productos</a>
+                            </li>
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link" href="nuestroTrabajo.html">
+                                Nuestro Trabajo
+                                </a>
+                            </li>
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link" href="contactos.html">Contactos</a>
+                            </li>
+                            <li class="nav-item nav-pills nav-fill">
+                                <a class="nav-link" href="ubicacion.html">Ubicación</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Buscar</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </main>
         <div class="wave">
             <img src="../img/wave.svg" alt="">
         </div>
