--- a/views/contactos.html
+++ b/views/contactos.html
@@ -60,47 +60,37 @@
         <!-- Inicio del contenido-->
         <div class="contenedorContenido">
             <article>
+                <div class="row">
+                    <div class="column">
+                        <form>
+                            <div class="mb-3">
+                              <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                              <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
+                            </div>
+                            <div class="mb-3">
+                              <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                              <input type="password" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3 form-check">
+                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                              <label class="form-check-label" for="exampleCheck1">Verificado</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                          </form>
+
+                    </div>
+                    <div class="column">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, libero a alias nulla veritatis placeat ratione dolor facilis saepe totam magni labore veniam est quasi, inventore provident quis ea esse.</p>
+
+                    </div>
+                </div>
 
                 <!-- inicio form -->
-                <form action="" class="formContacto">
-                    <fieldset>
-                        <legend>Informacion Personal</legend>
-                        <a>Nombre:</a>
-                        <br>
-                        <input type="text" placeholder="Nombre" class="textFocus"><br>
-                        <br>
-                        <a>Apellido:</a>
-                        <br>
-                        <input type="text" placeholder="Apellido" class="textFocus"><br>
-                        <br>
-                        <a>Email:</a>
-                        <br>
-                        <input type="email" placeholder="Email" class="textFocus" required><br>
-                        <br>
-                        <label for="Sexo">
-                            Sexo:
-                            <br>
-                            <input type="radio" name="sexo">Hombre <input type="radio" name="sexo">Mujer <input type="radio" name="sexo">Otro
-                        </label>
-                        <br>
-                        <br>
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
-                        <br>
-                        <br>
-                        <a>¿Quiere recibir noticias y ofertas de esta página?</a>
-                        <input type="checkbox">
-                        <br>
-                        <br>
-                        <input type="reset" value="Limpiar formulario" name="Limpiar">
-                        <input type="submit" value="Enviar">
-                    </fieldset>
-                </form>
+                
                 <!-- fin form -->
 
             </article>
-            <h5 class="parrafoContacto">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce justo libero, pulvinar eu mollis sit amet, egestas porta nunc. Phasellus eleifend ante diam, pulvinar consectetur lacus pellentesque ac. Sed eu odio eu nisi maximus sodales in at sem. Proin vitae vehicula ligula, tristique hendrerit mauris. Donec bibendum volutpat purus, nec vulputate lacus ultrices hendrerit. In pulvinar felis et tortor mollis, eget pharetra neque fermentum. Nulla molestie quis neque non gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-            </h5>
         </div>
         <div class="wave">
             <img src="../img/wave.svg" alt="">
