--- a/css/styles.css
+++ b/css/styles.css
@@ -1,206 +1,213 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 body {
-    font-size: 16px;/* 1rem = 10px */
-    font-family: 'Raleway', sans-serif;
-    color: #333333;
-    background-color: #c0c0c0;
-    /* background-image: linear-gradient(to top, #ffffff 0%, #cfd9df 100%); */
-}
-.logo{
-    width: 50px;
-    /* display: inline-block; */
-}
-.contenedorPrincipal{
-    display: grid;
-    grid-template-areas: 
-    "contenedorHeader"
-    "contenedorContenido"
-    "contenedorAnteriorFooter"
-    "contenedorFooter";
-    grid-template-columns: 100%;
-    grid-template-rows: auto auto auto auto;
-    /* grid-template-columns: 50% 50%;
-    grid-template-rows: 20px 100px; */
-
-}
-.contenedorPrincipal .contenedorHeader{
-    grid-area: contenedorHeader;
-    position: sticky;
-    display: flex; /* agrego flex al header*/
-    flex-direction: row;
-    justify-content: space-around;
-    top: 0px;
-    background-color: rgb(168, 168, 168);
-    border-bottom: solid white;
-    z-index: 3;
-}
-.contenedorPrincipal .contenedorHeader nav{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+  font-size: 16px; /* 1rem = 10px */
+  font-family: "Raleway", sans-serif;
+  color: #333333;
+  background-color: #c0c0c0;
+  /* background-image: linear-gradient(to top, #ffffff 0%, #cfd9df 100%); */
 }
 
-.contenedorContenido{
-    grid-area: contenedorContenido;
+.logo {
+  width: 50px;
+  /* display: inline-block; */
 }
-.listaNav li a{
-    font-family: 'Questrial', sans-serif, '100';
-    text-decoration: none;
-    cursor: pointer;
-    color: rgba(255, 255, 255, 0.89);
-    padding: 20px;
-    transition: color 0.3s;
-    
+
+.contenedorPrincipal {
+  display: grid;
+  grid-template-areas: "contenedorHeader" "contenedorContenido" "contenedorAnteriorFooter" "contenedorFooter";
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto auto auto;
+  /* grid-template-columns: 50% 50%;
+  grid-template-rows: 20px 100px; */
+}
+
+.contenedorPrincipal .contenedorHeader {
+  grid-area: contenedorHeader;
+  position: -webkit-sticky;
+  position: sticky;
+  display: flex; /* agrego flex al header*/
+  flex-direction: row;
+  justify-content: space-around;
+  top: 0px;
+  background-color: rgb(168, 168, 168);
+  border-bottom: solid white;
+  z-index: 3;
+}
+
+.contenedorPrincipal .contenedorHeader nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.contenedorContenido {
+  padding-top: 100px;
+  padding-right: 50px;
+  grid-area: contenedorContenido;
+}
+
+.listaNav li a {
+  font-family: "Questrial", sans-serif, "100";
+  text-decoration: none;
+  cursor: pointer;
+  color: rgba(255, 255, 255, 0.89);
+  padding: 20px;
+  transition: color 0.3s;
 }
 
 /* hover de la nav bar */
-.listaNav li a:hover{
-    color: rgb(0, 0, 0);
-} 
- /* estilos de la lista */
+.listaNav li a:hover {
+  color: rgb(0, 0, 0);
+}
+
+/* estilos de la lista */
 .listaNav {
-    font-size: 25px;
-    padding: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content:space-around;
-    flex-wrap: wrap;
-    
+  font-size: 25px;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.listaNav li{
-    list-style-type: none;
-    /* display: flex; */
+.listaNav li {
+  list-style-type: none;
+  /* display: flex; */
 }
 
+.listaNav li .local {
+  color: rgb(0, 0, 0);
+  cursor: default;
+}
 
-.listaNav li .local{
-    color:rgb(0, 0, 0);
-    cursor:default;
-} 
-
-.listaNav li .local:hover{
-    text-decoration: none;
+.listaNav li .local:hover {
+  text-decoration: none;
 }
 
 h1 {
-    font-size: 3.8rem;
-    font-family: 'Questrial', sans-serif, '100';
-    text-align: center;
-    color: white;
-    padding-bottom: 100px;
-}
-.contenedorPrincipal .parrafo{
-    font-size: 30px;
-    font-family: 'Questrial', sans-serif, '100';
-    color: white;
-    position: relative;
-    padding-left: 700px;
-    text-align: left;
-    bottom: 400px;
-    
-}
-.contenedorPrincipal .parrafoContacto{
-    font-size: 30px;
-    font-family: 'Questrial', sans-serif, '100';
-    color: white;
-    position: relative;
-    padding-left: 700px;
-    text-align: left;
-    bottom: 400px;
-    
-}
-.contenedorPrincipal .parrafoNT{
-    font-size: 25px;
-    font-family: 'Questrial', sans-serif, '100';
-    color: white;
-    position: relative;
-    text-align: center;
-    
-    
+  font-size: 3.8rem;
+  font-family: "Questrial", sans-serif, "100";
+  text-align: center;
+  color: white;
+  padding-bottom: 100px;
 }
 
-.contenedorPrincipal h1{
-    font-weight: lighter;
-}
-.contenedorPrincipal .tituloAbajo{
-    font-size: 30px;
-    font-family: 'Questrial', sans-serif, '100';
-    color: white;
-    position: relative;
-    text-align: center;
-    bottom: 100px;
-
-}
-.contenedorPrincipal .video{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding-top: 100px;
-}
-.contenedorPrincipal .mesaRatona{
-    width: 450px;
-    position: relative;
-    left: 400px;
-}
-.contenedorPrincipal .sillon{
-    width: 700px;
-    position: relative;
-    left: 400px;
-    
-}
-.contenedorPrincipal span{
-    font-weight: bold;
-}
-.contenedorPrincipal .imagen_inicio{
-    width: 450px;
-    position: relative;
-    left: 100px;
-    top: 35px;
-}
-.wave{
-    padding-top: 500px;
-}
-.contenedorPrincipal footer{
-    background-color: rgb(168, 168, 168);
-    text-align: center;
-    font-family: 'Questrial', sans-serif,'100';
-    font-size: 20px;
-}
-.formContacto{
-    display: flex;
-    flex-direction: row;
-    /* flex-wrap: wrap; */
-    justify-content: center;
-    font-family: 'Questrial', sans-serif, '100';
-    padding-right: 1000px;
-    
+.contenedorPrincipal .parrafo {
+  font-size: 30px;
+  font-family: "Questrial", sans-serif, "100";
+  color: white;
+  position: relative;
+  padding-left: 700px;
+  text-align: left;
+  bottom: 400px;
 }
 
-.formContacto .textFocus{
-    width: 150px;
-    height: 20px;
-    transition: all 1s;
+.contenedorPrincipal .parrafoContacto {
+  font-size: 30px;
+  font-family: "Questrial", sans-serif, "100";
+  color: white;
+  position: relative;
+  padding-left: 700px;
+  text-align: left;
+  bottom: 400px;
 }
 
-.formContacto .textFocus:focus{
-    width: 170px;
-    font-size: 18px;
+.contenedorPrincipal .parrafoNT {
+  font-size: 25px;
+  font-family: "Questrial", sans-serif, "100";
+  color: white;
+  position: relative;
+  text-align: center;
 }
-.texto_cr{
-    font-family: 'Questrial', sans-serif, '100';
-    font-size: 20px;
-    color: #4d4d33;
 
+.contenedorPrincipal h1 {
+  font-weight: lighter;
 }
-#videoNT{
-    width: 560px;
-    height: 315px;
-    right: 600px;
+
+.contenedorPrincipal .tituloAbajo {
+  font-size: 30px;
+  font-family: "Questrial", sans-serif, "100";
+  color: white;
+  position: relative;
+  text-align: center;
+  bottom: 100px;
 }
+
+.contenedorPrincipal .video {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding-top: 100px;
+}
+
+.contenedorPrincipal .mesaRatona {
+  width: 450px;
+  position: relative;
+  left: 400px;
+}
+
+.contenedorPrincipal .sillon {
+  width: 700px;
+  position: relative;
+  left: 400px;
+}
+
+.contenedorPrincipal span {
+  font-weight: bold;
+}
+
+.contenedorPrincipal .imagen_inicio {
+  width: 450px;
+  position: relative;
+  left: 100px;
+  top: 35px;
+}
+
+.wave {
+  padding-top: 500px;
+}
+
+.contenedorPrincipal footer {
+  background-color: rgb(168, 168, 168);
+  text-align: center;
+  font-family: "Questrial", sans-serif, "100";
+  font-size: 20px;
+}
+
+.formContacto {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  font-family: "Questrial", sans-serif, "100";
+  padding-right: 1000px;
+}
+
+.formContacto .textFocus {
+  width: 150px;
+  height: 20px;
+  transition: all 1s;
+}
+
+.formContacto .textFocus:focus {
+  width: 170px;
+  font-size: 18px;
+}
+
+.texto_cr {
+  font-family: "Questrial", sans-serif, "100";
+  font-size: 20px;
+  color: #4d4d33;
+}
+
+#videoNT {
+  width: 560px;
+  height: 315px;
+  right: 600px;
+}/*# sourceMappingURL=styles.css.map */
